Adicionando timestamp para aprovação do anuncio e estado do livro
