# app/Http/Controllers/Book/BookController.php
@@ -175,6 +175,15 @@ class BookController extends ApiController
      *         )
      *     ),
      *     @OA\Parameter(
+     *         name="condtion_id",
+     *         in="query",
+     *         description="ID da estado do livro (1 - Novo, 2 - Semi-novo, 3 - Usado)",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
      *         name="categories",
      *         in="query",
      *         description="IDs das categorias",
@@ -211,7 +220,12 @@ class BookController extends ApiController
             ? $request->input('categories') : explode(',', $request->input('categories'));
 
         foreach ($categories as $category) {
-            Category::findOrFail($category);
+            $category = ['category_id' => $category];
+            $validator = Validator::make($category, ['category_id' => 'required|exists:categories,id']);
+
+            if ($validator->fails()) {
+                return $this->unprocessable($validator->errors()->messages());
+            }
         }
 
         if ($request->has('images')) {
@@ -365,8 +379,9 @@ class BookController extends ApiController
      *     ),
      *  )
      */
-    public function status(Request $request, int $id)
+    public function changeStatus(Request $request, int $id)
     {
+        $request->merge(['approved_at' => Carbon::now()]);
         return parent::update($request, $id); // TODO: Change the autogenerated stub
     }
 
